feat: implement tracking events module
